# supertask

./: .gitignore  .gitmodules  CMakeLists.txt  CPackConfig.cmake  README.md
_build/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Makefile  cmake_install.cmake
_build/Testing/Temporary/: CTestCostData.txt
_build/_3rdParty/Hunter/toolchain/: toolchain.info.NOLF
_build/_3rdParty/Hunter/toolchain/_builds/: CMakeCache.txt  Makefile  cmake_install.cmake
_builds/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Makefile  check  cmake_install.cmake  demo
_builds/Testing/Temporary/: CTestCostData.txt
_builds/_3rdParty/Hunter/toolchain/_builds/: CMakeCache.txt  Makefile  cmake_install.cmake
examples/: demo.cpp
include/: sort.hpp
sources/: sort.cpp
suptertask/: .travis.yml  CMakeLists.txt  CPackConfig.cmake  Vagrantfile
suptertask/.vagrant/machines/default/virtualbox/: vagrant_cwd
suptertask/_build/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  install_manifest.txt
suptertask/_build/_3rdParty/Hunter/toolchain/: toolchain.info
suptertask/_build/_3rdParty/Hunter/toolchain/_builds/: CMakeCache.txt  Makefile  cmake_install.cmake
suptertask/_builds/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Makefile  check  cmake_install.cmake
suptertask/_builds/Testing/Temporary/: CTestCostData.txt
suptertask/_builds/_3rdParty/Hunter/: install-root-dir
tests/: test.cpp
(+4 files in other folders)
